Update idea-install.sh